--- a/FacebookNewsfeedSample/AndroidManifest.xml
+++ b/FacebookNewsfeedSample/AndroidManifest.xml
@@ -18,7 +18,8 @@
 			  android:icon="@drawable/ic_launcher">
 		<activity
 				  android:name=".activities.MyNewsfeedActivity"
-				  android:label="@string/app_name">
+				  android:label="@string/app_name"
+                  android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -27,7 +28,8 @@
 
 		<!-- Facebook SDK calls this Activity to perform Login -->
 		<activity android:name="com.facebook.LoginActivity"
-		          android:theme="@android:style/Theme.Translucent.NoTitleBar">
+		          android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                  android:screenOrientation="portrait">
 		</activity>
 
 		<meta-data
