--- a/FacebookNewsfeedSample/AndroidManifest.xml
+++ b/FacebookNewsfeedSample/AndroidManifest.xml
@@ -18,8 +18,7 @@
 			  android:icon="@drawable/ic_launcher">
 		<activity
 				  android:name=".activities.MyNewsfeedActivity"
-				  android:label="@string/app_name"
-                  android:screenOrientation="portrait">
+				  android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -28,8 +27,7 @@
 
 		<!-- Facebook SDK calls this Activity to perform Login -->
 		<activity android:name="com.facebook.LoginActivity"
-		          android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:screenOrientation="portrait">
+		          android:theme="@android:style/Theme.Translucent.NoTitleBar">
 		</activity>
 
 		<meta-data
